--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
 
     </header>
     <main>
+         <!-- Features section -->
+          <section class="team-Container">
+            <div class="team-images">
+                <img src="images/team1.png" alt="" class="image1">
+                <img src="images/team2.png" alt="" class="image2">
+                <img src="images/team3.png" alt="" class="image3">
+                <img src="images/team4.png" alt="" class="image4">
+                
+            </div>
+            <div class="team-content">
+                <h3 class="team-title">Quick list <span class="of-Our">of Our</span> <span class="Features">Features</span></h3>
+                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary"><a href="">Explore More</a></button>
+
+            </div>
+          </section>
 
     </main>
     <footer>
