--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New <br> Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary"><a href="">Explore More</a></button>
             </div>
             <img src="images/banner.png" alt="" class="banner-image">
@@ -28,22 +28,36 @@
 
     </header>
     <main>
-         <!-- Features section -->
+         <!-- Teams section -->
           <section class="team-Container">
             <div class="team-images">
-                <img src="images/team1.png" alt="" class="image1">
-                <img src="images/team2.png" alt="" class="image2">
-                <img src="images/team3.png" alt="" class="image3">
-                <img src="images/team4.png" alt="" class="image4">
+                <img src="images/team1.png" alt="" class="timage">
+                <img src="images/team2.png" alt="" class="timage">
+                <img src="images/team3.png" alt="" class="timage">
+                <img src="images/team4.png" alt="" class="timage">
                 
             </div>
             <div class="team-content">
                 <h3 class="team-title">Quick list <span class="of-Our">of Our</span> <span class="Features">Features</span></h3>
-                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary"><a href="">Explore More</a></button>
 
             </div>
           </section>
+          <!-- Features Section -->
+           <section class="features-Container">
+            <div class="features-content">
+
+            </div>
+            <div class="image-content">
+
+            </div>
+           </section>
+           <!-- Facts Section -->
+            <section>
+                <h3 class="Facts-title">Some Facts</h3>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </section>
 
     </main>
     <footer>
