--- a/index.html
+++ b/index.html
@@ -47,9 +47,33 @@
           <!-- Features Section -->
            <section class="features-Container">
             <div class="features-content">
+                <h2 class="title">Features you will <br>love & enjoy</h2>
+                <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <H3 class="fcard-title">Dexktop & Mobile Version</H3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <H3 class="fcard-title">Drag & Drop Builder</H3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <H3 class="fcard-title">Awesome Modern Design</H3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <H3 class="fcard-title">Super Easy to Edit</H3>
+                    <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
 
             </div>
             <div class="image-content">
+                <img src="images/architect.png" alt="">
+                <div class="experience">
+                    <h2 class="title">10+Year</h2>
+                    <h4 class="sub-title">Experience</h4>
+                </div>
+                
 
             </div>
            </section>
